--- a/templates/iterenary.html
+++ b/templates/iterenary.html
@@ -1,23 +1,7 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Itinerary | TourGuidePro</title>
-  
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-  
-  <!-- Tabler Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont/tabler-icons.min.css" rel="stylesheet">
-  
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="{% static 'css/iterenary.css' %}" />
-</head>
-<body>
+
+{% block content %}
   <!-- Animated Background -->
   <div class="animated-bg"></div>
 
@@ -136,5 +120,4 @@
   </footer>
 
   <script src="{% static 'js/iterenary.js' %}" defer></script>
-</body>
-</html>
+{% endblock %}
